syntax = "proto3";
package point.lockenomics;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "point/lockenomics/params.proto";
import "point/lockenomics/delegation_lock.proto";
// this line is used by starport scaffolding # 1

option go_package = "point/x/lockenomics/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/point/lockenomics/params";
  }
  // Queries a DelegationLock by index.
	rpc DelegationLock(QueryGetDelegationLockRequest) returns (QueryGetDelegationLockResponse) {
		option (google.api.http).get = "/point/lockenomics/delegation_lock/{index}";
	}

	// Queries a list of DelegationLock items.
	rpc DelegationLockAll(QueryAllDelegationLockRequest) returns (QueryAllDelegationLockResponse) {
		option (google.api.http).get = "/point/lockenomics/delegation_lock";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetDelegationLockRequest {
	  string index = 1;

}

message QueryGetDelegationLockResponse {
	DelegationLock delegationLock = 1 [(gogoproto.nullable) = false];
}

message QueryAllDelegationLockRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllDelegationLockResponse {
	repeated DelegationLock delegationLock = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
